--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.10.6"
   }
 }
