Chuyển đổi cấu trúc source sang Node module Express
Chuyển đổi cấu trúc source sang Node module Express

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "strict": true
   },
   "include": [
-    "src/**/*.ts"
+    "*.ts",
+    "./src/**/*.ts"
   ],
   "exclude": [
     "node_modules"
