--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon --inspect dist/server.js",
     "build": "tsc --watch",
+    "buildWebpack": "webpack",
     "tslint:check": "tslint -c tslint.json 'src/**/*.{ts,tsx}'"
   },
   "author": "",
@@ -14,9 +16,16 @@
     "stylelint": "^16.2.1",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "copy-webpack-plugin": "^12.0.2",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
+    "express": "^4.18.3",
     "sweetalert2": "^11.10.6"
   }
 }
